# gtfs-realtime-etl

./: .example.env  .gitignore  Makefile  README.md  app.py  config.py  deploy.sh  gtfs-realtime-etl-cdk-outputs.json  pyproject.toml  requirements-dev.txt  requirements.txt
compaction/infrastructure/: config.py  construct.py
compaction/runtime/: Dockerfile  handler.py  requirements.txt
database/infrastructure/: config.py  construct.py
database/runtime/: Dockerfile  handler.py
etl/infrastructure/: config.py  construct.py
etl/runtime/: Dockerfile  handler.py  requirements.txt
event_bridge/infrastructure/: config.py  construct.py
event_bridge/runtime/: Dockerfile  handler.py  requirements.txt
network/infrastructure/: config.py  construct.py
notebooks/: pyproject.toml  schedule_deviation.ipynb  visualize_locations.ipynb
