[project]
name = "notebooks"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.49",
    "duckdb>=1.4.0",
    "duckdb-engine>=0.17.0",
    "geoarrow-pyarrow>=0.2.0",
    "geoarrow-rust-io>=0.5.3",
    "geopandas>=1.1.1",
    "gtfs-realtime-bindings>=1.0.0",
    "jupysql>=0.11.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pygeohash>=3.2.0",
    "requests>=2.32.5",
    "toml>=0.10.2",
]
