[project]
name = "notebooks"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.49",
    "contextily>=1.6.2",
    "duckdb>=1.4.0",
    "duckdb-engine>=0.17.0",
    "geoarrow-pyarrow>=0.2.0",
    "geoarrow-rust-io>=0.5.3",
    "geopandas>=1.1.1",
    "gtfs-realtime-bindings>=1.0.0",
    "jupysql>=0.11.1",
    "jupyter>=1.1.1",
    "lonboard>=0.12.1",
    "matplotlib>=3.10.6",
    "palettable>=3.3.3",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pygeohash>=3.2.0",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "toml>=0.10.2",
    "xyzservices>=2025.4.0",
]
